--- a/src/main/webapp/personcenter/index-green.html
+++ b/src/main/webapp/personcenter/index-green.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Easy Profile Green - templatemo</title>
+	<title>个人中心</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -23,6 +23,13 @@
 </div>
 `
 <!-- header section -->
+<header class="home">
+        <h1 class="logo fl">
+            <a href="/">值得投</a><strong>投资，这么投更值</strong>
+        </h1>
+        <a href="#" class="btn txt-right f-20 iconfont fr"><span>&#xe60a;</span>
+        </a>
+</header>
 <header>
 	<div class="container">
 		<div class="row">
@@ -171,7 +178,12 @@
 		</div>
 	</div>
 </footer>
-
+        <nav class="bt-1">
+            <a href="index.html" class="nav-home current"><span class="iconfont"></span><span class="nav-title">首页</span></a>
+            <a href="#" class="nav-news"><span class="iconfont"></span><span class="nav-title">看新闻</span></a>
+            <a href="login.html" class="nav-user"><span class="iconfont"></span><span class="nav-title">我的账户</span></a>
+            <a href="#.html" class="nav-customer-service"><span class="iconfont"></span><span class="nav-title">咨询客服</span></a>
+        </nav>
 <!-- javascript js -->	
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>	
